--- a/game.project
+++ b/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /example/example.collectionc
+main_collection = /examples/websocket.collectionc
 
 [script]
 shared_state = 1
@@ -9,8 +9,9 @@ width = 960
 height = 640
 
 [project]
-title = myextension
+title = extension-websocket
+_dependencies = https://github.com/GameAnalytics/defold-openssl/archive/1.0.0.zip
 
 [library]
-include_dirs = myextension
+include_dirs = websocket
 
