--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -2,33 +2,59 @@ name: Build with bob
 
 on: [push]
 
-
-# env:
-#   S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
-#   S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
-#   NOTARIZATION_USERNAME: ${{ secrets.NOTARIZATION_USERNAME }}
-#   NOTARIZATION_PASSWORD: ${{ secrets.NOTARIZATION_PASSWORD }}
-#   NOTARIZATION_ITC_PROVIDER: ${{ secrets.NOTARIZATION_ITC_PROVIDER }}
-#   DM_PACKAGES_URL: ${{ secrets.DM_PACKAGES_URL }}
-#   WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
-#   WINDOWS_CERTIFICATE_PASS: ${{ secrets.WINDOWS_CERTIFICATE_PASS }}
-#   MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
-#   MACOS_CERTIFICATE_PASS: ${{ secrets.MACOS_CERTIFICATE_PASS }}
-#   DEFOLD_EDITOR_DISABLE_PERFORMANCE_TESTS: true
-
+env:
+  FILENAME_VERSION: 'info.json'
+  BUILD_SERVER: 'https://build.defold.com'
 
 jobs:
   download_bob:
     runs-on: ubuntu-latest
     steps:
-      - run: wget http://d.defold.com/stable/info.json
-      - name: get bob version
-        id: bob_version
+      - run: wget http://d.defold.com/stable/${{FILENAME_VERSION}}
+
+      - name: Parse bob version
+        id: defold_version
         uses: notiz-dev/github-action-json-property@release
         with:
-            path: 'info.json'
+            path: '${{FILENAME_VERSION}}'
             prop_path: 'sha1'
-      - run: echo ${{steps.bob_version.outputs.prop}}
+
+      - name: Set DEFOLD_VERSION
+        uses: allenevans/set-env@v2.0.0
+        with:
+          DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
+      - run: echo "Found version '${DEFOLD_VERSION}'"
+      - run: wget http://d.defold.com/archive/stable/${DEFOLD_VERSION}/bob/bob.jar
+
+      - name: Cache dependencies (upload)
+        uses: actions/cache@v2
+        with:
+          path: bob.jar
+          key: bob-${DEFOLD_VERSION}
+
+
+  build_with_bob:
+    needs: [download_bob]
+    strategy:
+      matrix:
+        #platform: [armv7-android, armv7-darwin, x86_64-darwin, x86_64-win32, win32, x86_64-linux, js-web]
+        platform: [x86_64-darwin]
+    runs-on: ubuntu-latest
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.2'
+          java-package: jre
+
+      - name: Cache dependencies (download)
+        uses: actions/cache@v2
+        with:
+          path: |
+            ${{FILENAME_VERSION}}
+            bob.jar
+          key: bob-${DEFOLD_VERSION}
+
+      - run: java -jar bob.jar --version
 
 #     build:
 #       if: "!contains(github.event.head_commit.message, 'skip-ci')"
