--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -40,6 +40,7 @@ jobs:
         #platform: [armv7-android, armv7-darwin, x86_64-darwin, x86_64-win32, win32, x86_64-linux, js-web]
         platform: [x86_64-darwin]
     runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
