--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -24,13 +24,17 @@ jobs:
         with:
           DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
       - run: echo "Found version '${DEFOLD_VERSION}'"
-      - run: wget http://d.defold.com/archive/stable/${DEFOLD_VERSION}/bob/bob.jar
+      - run: wget -q http://d.defold.com/archive/stable/${DEFOLD_VERSION}/bob/bob.jar
+
+      - name: Printenv
+        run: |
+          printenv
 
       - name: Cache dependencies (upload)
         uses: actions/cache@v2
         with:
           path: bob.jar
-          key: bob-${DEFOLD_VERSION}
+          key: 'bob-${{DEFOLD_VERSION}}'
 
 
   build_with_bob:
@@ -57,7 +61,7 @@ jobs:
           path: |
             ${{env.FILENAME_VERSION}}
             bob.jar
-          key: bob-${DEFOLD_VERSION}
+          key: 'bob-${{DEFOLD_VERSION}}'
 
       - run: java -jar bob.jar --version
 
