--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -38,7 +38,7 @@ jobs:
     needs: [download_bob]
     strategy:
       matrix:
-        platform: [armv7-android, armv7-darwin, x86_64-darwin, x86_64-win32, win32, x86_64-linux, js-web]
+        platform: [armv7-android, armv7-darwin, x86_64-darwin, x86_64-win32, x86-win32, x86_64-linux, js-web]
     runs-on: ubuntu-latest
 
     name: Build
