--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -38,7 +38,7 @@ jobs:
     needs: [download_bob]
     strategy:
       matrix:
-        platform: [armv7-android, arm64-android, armv7-darwin, arm64-darwin, x86_64-darwin, x86_64-linux, x86_64-win32, x86-win32, js-web, wasm-web]
+        platform: [armv7-android, x86_64-linux, x86_64-win32, x86-win32, js-web]
     runs-on: ubuntu-latest
 
     name: Build
@@ -70,5 +70,43 @@ jobs:
 
       - run: java -jar bob.jar --version
       - run: java -jar bob.jar resolve --email a@b.com --auth 123456
-      - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} --platform=${{ matrix.platform }} --architectures=${{ matrix.platform }}
+      - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
+
+  build_with_bob_macos:
+    needs: [download_bob]
+    strategy:
+      matrix:
+        platform: [armv7-darwin, x86_64-darwin]
+    runs-on: macOS-latest
+
+    name: Build
+    steps:
+
+      - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
+      - name: Parse bob version
+        id: defold_version
+        uses: notiz-dev/github-action-json-property@release
+        with:
+            path: '${{env.VERSION_FILENAME}}'
+            prop_path: 'sha1'
+      - name: Set DEFOLD_VERSION
+        uses: allenevans/set-env@v2.0.0
+        with:
+          DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
+
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.2'
+          java-package: jre
+
+      - name: Cache dependencies (download)
+        uses: actions/cache@v2
+        with:
+          path: bob.jar
+          key: 'bob-${DEFOLD_VERSION}'
+
+      - run: java -jar bob.jar --version
+      - run: java -jar bob.jar resolve --email a@b.com --auth 123456
+      - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
 
