--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -27,84 +27,84 @@ jobs:
       - run: echo "Found version '${DEFOLD_VERSION}'"
       - run: wget -q http://d.defold.com/archive/stable/${DEFOLD_VERSION}/bob/bob.jar
 
-      - name: Cache dependencies (upload)
-        uses: actions/cache@v2
-        with:
-          path: bob.jar
-          key: bob-${DEFOLD_VERSION}
+      # - name: Cache dependencies (upload)
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: bob.jar
+      #     key: bob-${DEFOLD_VERSION}
 
 
-  build_with_bob:
-    needs: [download_bob]
-    strategy:
-      matrix:
-        platform: [armv7-android, x86_64-linux, x86_64-win32, x86-win32, js-web]
-    runs-on: ubuntu-latest
+  # build_with_bob:
+  #   needs: [download_bob]
+  #   strategy:
+  #     matrix:
+  #       platform: [armv7-android, x86_64-linux, x86_64-win32, x86-win32, js-web]
+  #   runs-on: ubuntu-latest
 
-    name: Build
-    steps:
+  #   name: Build
+  #   steps:
 
-      - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
-      - name: Parse bob version
-        id: defold_version
-        uses: notiz-dev/github-action-json-property@release
-        with:
-            path: '${{env.VERSION_FILENAME}}'
-            prop_path: 'sha1'
-      - name: Set version variable
-        uses: allenevans/set-env@v2.0.0
-        with:
-          DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
+  #     - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
+  #     - name: Parse bob version
+  #       id: defold_version
+  #       uses: notiz-dev/github-action-json-property@release
+  #       with:
+  #           path: '${{env.VERSION_FILENAME}}'
+  #           prop_path: 'sha1'
+  #     - name: Set version variable
+  #       uses: allenevans/set-env@v2.0.0
+  #       with:
+  #         DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.0.2'
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-java@v1
+  #       with:
+  #         java-version: '11.0.2'
 
-      - name: Cache dependencies (download)
-        uses: actions/cache@v2
-        with:
-          path: bob.jar
-          key: bob-${DEFOLD_VERSION}
+  #     - name: Cache dependencies (download)
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: bob.jar
+  #         key: bob-${DEFOLD_VERSION}
 
-      - run: java -jar bob.jar --version
-      - run: java -jar bob.jar resolve --email a@b.com --auth 123456
-      - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
+  #     - run: java -jar bob.jar --version
+  #     - run: java -jar bob.jar resolve --email a@b.com --auth 123456
+  #     - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
 
-  build_with_bob_macos:
-    needs: [download_bob]
-    strategy:
-      matrix:
-        platform: [armv7-darwin, x86_64-darwin]
-    runs-on: macOS-latest
+  # build_with_bob_macos:
+  #   needs: [download_bob]
+  #   strategy:
+  #     matrix:
+  #       platform: [armv7-darwin, x86_64-darwin]
+  #   runs-on: macOS-latest
 
-    name: Build
-    steps:
+  #   name: Build
+  #   steps:
 
-      - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
-      - name: Parse bob version
-        id: defold_version
-        uses: notiz-dev/github-action-json-property@release
-        with:
-            path: '${{env.VERSION_FILENAME}}'
-            prop_path: 'sha1'
-      - name: Set version variable
-        uses: allenevans/set-env@v2.0.0
-        with:
-          DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
+  #     - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
+  #     - name: Parse bob version
+  #       id: defold_version
+  #       uses: notiz-dev/github-action-json-property@release
+  #       with:
+  #           path: '${{env.VERSION_FILENAME}}'
+  #           prop_path: 'sha1'
+  #     - name: Set version variable
+  #       uses: allenevans/set-env@v2.0.0
+  #       with:
+  #         DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.0.2'
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-java@v1
+  #       with:
+  #         java-version: '11.0.2'
 
-      - name: Cache dependencies (download)
-        uses: actions/cache@v2
-        with:
-          path: bob.jar
-          key: bob-${DEFOLD_VERSION}
+  #     - name: Cache dependencies (download)
+  #       uses: actions/cache@v2
+  #       with:
+  #         path: bob.jar
+  #         key: bob-${DEFOLD_VERSION}
 
-      - run: java -jar bob.jar --version
-      - run: java -jar bob.jar resolve --email a@b.com --auth 123456
-      - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
+  #     - run: java -jar bob.jar --version
+  #     - run: java -jar bob.jar resolve --email a@b.com --auth 123456
+  #     - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
 
