--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -20,7 +20,9 @@ jobs:
             path: '${{env.VERSION_FILENAME}}'
             prop_path: 'sha1'
       - name: Set env
-        run: echo "DEFOLD_VERSION=${{steps.defold_version.outputs.prop}}" >> $GITHUB_ENV
+        run: |
+          TMPVAR=`GOO=`curl -s http://d.defold.com/stable/info.json | jq -r '.sha1'`
+          echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
       # - name: Set version variable
       #   uses: allenevans/set-env@v2.0.0
       #   with:
