--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -7,36 +7,36 @@ env:
   BUILD_SERVER: 'https://build.defold.com'
 
 jobs:
-  download_bob:
-    runs-on: ubuntu-latest
-    name: Download Bob
-    steps:
-      # - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
+  # download_bob:
+  #   runs-on: ubuntu-latest
+  #   name: Download Bob
+  #   steps:
+  #     # - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
 
-      # - name: Parse bob version
-      #   id: defold_version
-      #   uses: notiz-dev/github-action-json-property@release
-      #   with:
-      #       path: '${{env.VERSION_FILENAME}}'
-      #       prop_path: 'sha1'
-      - name: Get Defold version
-        run: |
-          TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
-          echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
-          echo "Found version ${TMPVAR}"
+  #     # - name: Parse bob version
+  #     #   id: defold_version
+  #     #   uses: notiz-dev/github-action-json-property@release
+  #     #   with:
+  #     #       path: '${{env.VERSION_FILENAME}}'
+  #     #       prop_path: 'sha1'
+  #     - name: Get Defold version
+  #       run: |
+  #         TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
+  #         echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
+  #         echo "Found version ${TMPVAR}"
 
-      # - name: Set version variable
-      #   uses: allenevans/set-env@v2.0.0
-      #   with:
-      #     DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
-      - name: Download bob.jar
-        run: wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
+  #     # - name: Set version variable
+  #     #   uses: allenevans/set-env@v2.0.0
+  #     #   with:
+  #     #     DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
+  #     - name: Download bob.jar
+  #       run: wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
 
-      # - name: Cache dependencies (upload)
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: bob.jar
-      #     key: bob-${DEFOLD_VERSION}
+  #     # - name: Cache dependencies (upload)
+  #     #   uses: actions/cache@v2
+  #     #   with:
+  #     #     path: bob.jar
+  #     #     key: bob-${DEFOLD_VERSION}
 
 
   build_with_bob:
@@ -49,6 +49,11 @@ jobs:
 
     name: Build
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.2'
+
       - name: Get Defold version
         run: |
           TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
@@ -56,7 +61,9 @@ jobs:
           echo "Found version ${TMPVAR}"
 
       - name: Download bob.jar
-        run: wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
+        run: |
+          wget -q -O http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
+          java -jar bob.jar --version
 
       # - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
       # - name: Parse bob version
@@ -70,18 +77,13 @@ jobs:
       #   with:
       #     DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.0.2'
-
       # - name: Cache dependencies (download)
       #   uses: actions/cache@v2
       #   with:
       #     path: bob.jar
       #     key: bob-${DEFOLD_VERSION}
 
-      - run: java -jar bob.jar --version
+      #- run: java -jar bob.jar --version
       - run: java -jar bob.jar resolve --email a@b.com --auth 123456
       - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
 
