--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -85,8 +85,12 @@ jobs:
       #     key: bob-${DEFOLD_VERSION}
 
       #- run: java -jar bob.jar --version
-      - run: java -jar bob.jar resolve --email a@b.com --auth 123456
-      - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
+      - name: Resolve libraries
+        run: java -jar bob.jar resolve --email a@b.com --auth 123456
+      - name: Build
+        run: java -jar bob.jar --platform=${{ matrix.platform }} build --archive --build-server=${{env.BUILD_SERVER}}
+      - name: Bundle
+        run: java -jar bob.jar --platform=${{ matrix.platform }} bundle
 
   # build_with_bob_macos:
   #   needs: [download_bob]
