--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -7,52 +7,16 @@ env:
   BUILD_SERVER: 'https://build.defold.com'
 
 jobs:
-  # download_bob:
-  #   runs-on: ubuntu-latest
-  #   name: Download Bob
-  #   steps:
-  #     # - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
-
-  #     # - name: Parse bob version
-  #     #   id: defold_version
-  #     #   uses: notiz-dev/github-action-json-property@release
-  #     #   with:
-  #     #       path: '${{env.VERSION_FILENAME}}'
-  #     #       prop_path: 'sha1'
-  #     - name: Get Defold version
-  #       run: |
-  #         TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
-  #         echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
-  #         echo "Found version ${TMPVAR}"
-
-  #     # - name: Set version variable
-  #     #   uses: allenevans/set-env@v2.0.0
-  #     #   with:
-  #     #     DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
-  #     - name: Download bob.jar
-  #       run: wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
-
-  #     # - name: Cache dependencies (upload)
-  #     #   uses: actions/cache@v2
-  #     #   with:
-  #     #     path: bob.jar
-  #     #     key: bob-${DEFOLD_VERSION}
-
-
   build_with_bob:
-    #needs: [download_bob]
     strategy:
       matrix:
-        #platform: [armv7-android, x86_64-linux, x86_64-win32, x86-win32, js-web]
-        platform: [x86_64-win32]
+        platform: [armv7-android, x86_64-linux, x86_64-win32, x86-win32, js-web]
     runs-on: ubuntu-latest
 
     name: Build
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
-        with:
-          java-version: '11.0.2'
 
       - name: Get Defold version
         run: |
@@ -63,28 +27,8 @@ jobs:
       - name: Download bob.jar
         run: |
           wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
-          ls -la
           java -jar bob.jar --version
 
-      # - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
-      # - name: Parse bob version
-      #   id: defold_version
-      #   uses: notiz-dev/github-action-json-property@release
-      #   with:
-      #       path: '${{env.VERSION_FILENAME}}'
-      #       prop_path: 'sha1'
-      # - name: Set version variable
-      #   uses: allenevans/set-env@v2.0.0
-      #   with:
-      #     DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
-
-      # - name: Cache dependencies (download)
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: bob.jar
-      #     key: bob-${DEFOLD_VERSION}
-
-      #- run: java -jar bob.jar --version
       - name: Resolve libraries
         run: java -jar bob.jar resolve --email a@b.com --auth 123456
       - name: Build
@@ -92,40 +36,32 @@ jobs:
       - name: Bundle
         run: java -jar bob.jar --platform=${{ matrix.platform }} bundle
 
-  # build_with_bob_macos:
-  #   needs: [download_bob]
-  #   strategy:
-  #     matrix:
-  #       platform: [armv7-darwin, x86_64-darwin]
-  #   runs-on: macOS-latest
+  # not technically needed for building, but we want to test bundling as well, since we're also testing the manifest merging
+  build_with_bob_macos:
+    strategy:
+      matrix:
+        platform: [armv7-darwin, x86_64-darwin]
+    runs-on: macOS-latest
 
-  #   name: Build
-  #   steps:
+    name: Build
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
 
-  #     - run: wget http://d.defold.com/stable/${{env.VERSION_FILENAME}}
-  #     - name: Parse bob version
-  #       id: defold_version
-  #       uses: notiz-dev/github-action-json-property@release
-  #       with:
-  #           path: '${{env.VERSION_FILENAME}}'
-  #           prop_path: 'sha1'
-  #     - name: Set version variable
-  #       uses: allenevans/set-env@v2.0.0
-  #       with:
-  #         DEFOLD_VERSION: '${{steps.defold_version.outputs.prop}}'
+      - name: Get Defold version
+        run: |
+          TMPVAR=`curl -s http://d.defold.com/stable/${{env.VERSION_FILENAME}} | jq -r '.sha1'`
+          echo "DEFOLD_VERSION=${TMPVAR}" >> $GITHUB_ENV
+          echo "Found version ${TMPVAR}"
 
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-java@v1
-  #       with:
-  #         java-version: '11.0.2'
+      - name: Download bob.jar
+        run: |
+          wget -q http://d.defold.com/archive/stable/${{env.DEFOLD_VERSION}}/bob/bob.jar
+          java -jar bob.jar --version
 
-  #     - name: Cache dependencies (download)
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: bob.jar
-  #         key: bob-${DEFOLD_VERSION}
-
-  #     - run: java -jar bob.jar --version
-  #     - run: java -jar bob.jar resolve --email a@b.com --auth 123456
-  #     - run: java -jar bob.jar build --archive --build-server=${{env.BUILD_SERVER}} bundle --platform=${{ matrix.platform }}
-
+      - name: Resolve libraries
+        run: java -jar bob.jar resolve --email a@b.com --auth 123456
+      - name: Build
+        run: java -jar bob.jar --platform=${{ matrix.platform }} build --archive --build-server=${{env.BUILD_SERVER}}
+      - name: Bundle
+        run: java -jar bob.jar --platform=${{ matrix.platform }} bundle
