--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.2'
 
       - name: Get Defold version
         run: |
@@ -47,6 +49,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.2'
 
       - name: Get Defold version
         run: |
