Full logging in the example

--- a/game.project
+++ b/game.project
@@ -15,3 +15,5 @@ _dependencies = https://github.com/GameAnalytics/defold-openssl/archive/1.0.0.zi
 [library]
 include_dirs = websocket
 
+[websocket]
+debug = 2
